[package]
name = "inclusionprover"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
celestia-rpc = {path = "../lumina/rpc"}
celestia-types = {path = "../lumina/types"}
thiserror = "1.0.50"
rand = "0.8.5"
nmt-rs = {version = "0.1.0", features = ["serde"]}
serde = { version = "1.0.164", features = ["derive"] }
#celestia-proto = { version = "0.1.0", path = "../lumina/proto" }
tendermint-proto = { git = "https://github.com/eigerco/celestia-tendermint-rs.git", rev = "bbe7de8" }
serde_json = "1.0.114"